--- a/credit_risk/credit_risk_classification.ipynb
+++ b/credit_risk/credit_risk_classification.ipynb
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,20 +722,34 @@
     "\n",
     "# Instantiate the random oversampler model\n",
     "# # Assign a random_state parameter of 1 to the model\n",
-    "# YOUR CODE HERE!\n",
+    "ros = RandomOverSampler(random_state=1)\n",
     "\n",
     "# Fit the original training data to the random_oversampler model\n",
-    "# YOUR CODE HERE!"
+    "X_resampled, y_resampled = ros.fit_resample(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "loan_status\n",
+       "0    56277\n",
+       "1    56277\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Count the distinct values of the resampled labels data\n",
-    "# YOUR CODE HERE!"
+    "pd.Series(y_resampled).value_counts()"
    ]
   },
   {
@@ -747,19 +761,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Instantiate the Logistic Regression model\n",
     "# Assign a random_state parameter of 1 to the model\n",
-    "# YOUR CODE HERE!\n",
+    "classifier_resampled = LogisticRegression(random_state=1)\n",
     "\n",
     "# Fit the model using the resampled training data\n",
-    "# YOUR CODE HERE!\n",
+    "classifier_resampled.fit(X_resampled, y_resampled)\n",
     "\n",
     "# Make a prediction using the testing data\n",
-    "# YOUR CODE HERE!"
+    "predictions_resampled = classifier_resampled.predict(X_test)"
    ]
   },
   {
@@ -777,32 +791,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9952022286421791"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Print the balanced_accuracy score of the model \n",
-    "# YOUR CODE HERE!"
+    "accuracy_score_resampled = accuracy_score(y_test, predictions_resampled)\n",
+    "accuracy_score_resampled"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[18668,    91],\n",
+       "       [    2,   623]], dtype=int64)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Generate a confusion matrix for the model\n",
-    "# YOUR CODE HERE!"
+    "confusion_matrix_resampled = confusion_matrix(y_test, predictions_resampled)\n",
+    "confusion_matrix_resampled"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'              precision    recall  f1-score   support\\n\\n           0       1.00      1.00      1.00     18759\\n           1       0.87      1.00      0.93       625\\n\\n    accuracy                           1.00     19384\\n   macro avg       0.94      1.00      0.96     19384\\nweighted avg       1.00      1.00      1.00     19384\\n'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Print the classification report for the model\n",
-    "# YOUR CODE HERE!"
+    "classification_report_resampled = classification_report(y_test, predictions_resampled, target_names=target_names)\n",
+    "classification_report_resampled"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9959744975744975"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Print the balanced_accuracy score of the model\n",
+    "balanced_accuracy_score_resampled = balanced_accuracy_score(y_test, predictions_resampled)\n",
+    "balanced_accuracy_score_resampled "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy Score (Resampled Data): 0.9952022286421791\n",
+      "Balanced Accuracy Score (Resampled Data): 0.9959744975744975\n",
+      "Confusion Matrix (Resampled Data):\n",
+      " [[18668    91]\n",
+      " [    2   623]]\n",
+      "Classification Report (Resampled Data):\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00     18759\n",
+      "           1       0.87      1.00      0.93       625\n",
+      "\n",
+      "    accuracy                           1.00     19384\n",
+      "   macro avg       0.94      1.00      0.96     19384\n",
+      "weighted avg       1.00      1.00      1.00     19384\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print the results\n",
+    "print(\"Accuracy Score (Resampled Data):\", accuracy_score_resampled)\n",
+    "print(\"Balanced Accuracy Score (Resampled Data):\", balanced_accuracy_score_resampled)\n",
+    "print(\"Confusion Matrix (Resampled Data):\\n\", confusion_matrix_resampled)\n",
+    "print(\"Classification Report (Resampled Data):\\n\", classification_report_resampled)"
    ]
   },
   {
@@ -818,7 +930,7 @@
    "source": [
     "**Question:** How well does the logistic regression model, fit with oversampled data, predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** YOUR ANSWER HERE!"
+    "**Answer:** The logistic regression model, trained on oversampled data, predicts both healthy loans and high-risk loans very effectively. It has high accuracy, balanced accuracy, and provides a good balance between precision and recall for class 1. The model's performance suggests it is a valuable tool for classifying loans into these categories."
    ]
   }
  ],
